--- a/recipes/mintchicken.html
+++ b/recipes/mintchicken.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MintChicken</title>
 </head>
 <body>
     <h1>Mint Chicken</h1>
+    <img src="../images/MintChicken.jpeg" alt="A picture of Mint Chicken cooked">
+    <p>
+        <h2>Description</h2>
+        <p>A favorite family recipe that my Mom has made for hundreds of guests. 
+            Fresh lemon juice and mint leaves are a must! Serve over hot cooked white rice.</p>
+    </p>
+    <p>
+        <h2>Ingrediends</h2>
+        <p>
+            <ul>
+                <li>2 skinless, boneless chicken breast halves - cut into bite-size pieces</li>
+                <li>1 clove garlic, crushed</li>
+                <li>½ cup all-purpose flour</li>
+                <li>½ cup margarine</li>
+                <li>¼ cup fresh lemon juice</li>
+                <li>½ cup chopped fresh mint leaves</li>
+            </ul>
+        </p>
+        <p>
+            <h2>Steps</h2>
+            <p>
+                <ol>
+                    <li>In a medium bowl, mix together the chicken pieces and garlic. Toss with the flour just to coat, and shake off excess.</li>
+                    <li>Heat the margarine in a large skillet over medium-high heat. 
+                        Add the chicken pieces; cook and stir until browned. 
+                        Add the mint leaves and lemon juice, cover and steam for about 5 minutes, just until the chicken is cooked through. 
+                        Do not over cook the chicken or it will be tough.</li>
+                </ol>
+            </p>
+        </p>
+    </p>
 </body>
 </html>
