--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/mintchicken.html">Mint Chicken</a>
-    <a href="recipes/strawberryspinachsalad.html">Strawberry Spinach Salad</a>
+    <ul>
+
+         <li><a href="recipes/mintchicken.html">Mint Chicken</a></li>
+         <li><a href="recipes/strawberryspinachsalad.html">Strawberry Spinach Salad</a></li>
+         <li><a href="recipes/misosoup.html">Miso Soup</a></li>
 </body>
 </html>
