--- a/recipes/misosoup.html
+++ b/recipes/misosoup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Miso Soup</h1>
-    <img src="../images/" alt="Photo of a Miso Soup">
+    <img src="../images/miso-soup.jpeg" alt="Photo of a Miso Soup">
     
     <p>
         <h1>Description</h1>
